feat: criado rota para login e logout de usuarios
